--- a/gw/components/wbxbar/Bender.yml
+++ b/gw/components/wbxbar/Bender.yml
@@ -14,7 +14,7 @@ sources:
     files:
      - rtl/wbxbar_ooc.sv
 
-  - target: any(vivado, verilator)
+  - target: any(vivado, openxc7, verilator)
     defines:
       NO_MODPORT_EXPRESSIONS: ~
     files:
