--- a/gw/components/litedram/Bender.yml
+++ b/gw/components/litedram/Bender.yml
@@ -11,7 +11,7 @@ sources:
     - lint.vlt
     - sim/rtl/litedram.v
     - common/rtl/litedram_wrapper.sv
-  - target: vivado
+  - target: any(vivado, openxc7)
     files:
     - arty/rtl/litedram.v
     - common/rtl/litedram_wrapper.sv
