--- a/gw/components/picorv_dma/Bender.yml
+++ b/gw/components/picorv_dma/Bender.yml
@@ -9,7 +9,7 @@ sources:
   - target: verilator
     files:
     - lint.vlt
-  - target: any(verilator, vivado)
+  - target: any(verilator, vivado, openxc7)
     files:
     - ../../../sub/picorv32/picosoc/picosoc_mem.v
     - ../../../sub/picorv32/picorv32.v
