--- a/gw/components/sdspi/Bender.yml
+++ b/gw/components/sdspi/Bender.yml
@@ -9,7 +9,7 @@ sources:
   - target: verilator
     files:
      - lint.vlt
-  - target: any(verilator, vivado)
+  - target: any(verilator, vivado, openxc7)
     files:
      - ../../../sub/sdspi/rtl/sdspi.v
      - ../../../sub/sdspi/rtl/llsdspi.v
