--- a/gw/components/vs0_j1b/Bender.yml
+++ b/gw/components/vs0_j1b/Bender.yml
@@ -9,7 +9,7 @@ sources:
   - target: verilator
     files:
     - lint.vlt
-  - target: any(verilator, vivado)
+  - target: any(verilator, vivado, openxc7)
     include_dirs:
     - ../../../sub/swapforth/j1b/verilog/
     files:
