--- a/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+if(CMAKE_BUILD_TYPE STREQUAL "vivado")
   #gw_project_rules_vivado() function is defined in the parent CMakeLists.txt.
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
