first openxc7 build WIP

--- a/gw/components/ibex/Bender.yml
+++ b/gw/components/ibex/Bender.yml
@@ -6,12 +6,6 @@ package:
   name: ibex
 
 sources:
-  - target: verilator
-    files:
-    - lint.vlt
-    - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_ff.sv
-    defines:
-      PRIM_DEFAULT_IMPL: prim_pkg::ImplGeneric
   - target: any(verilator, vivado, openxc7)
     include_dirs:
       - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_dv_dv_fcov_macros_0
@@ -74,9 +68,6 @@ sources:
       - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_lockstep.sv
       - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_top.sv
 
-  - target: all(ibex,any(vivado, openxc7))
-    files:
-    - rtl/ibex_top_wrap.sv
   - target: any(vivado, openxc7)
     files:
     - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_prim_secded_0.1/rtl/prim_secded_22_16_dec.sv
@@ -124,4 +115,14 @@ sources:
     defines:
       PRIM_DEFAULT_IMPL: prim_pkg::ImplXilinx
 
+  - target: verilator
+    files:
+    - lint.vlt
+    - ../../../sub/ibex/build/lowrisc_ibex_top_artya7_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/ibex_register_file_ff.sv
+    defines:
+      PRIM_DEFAULT_IMPL: prim_pkg::ImplGeneric
+
+  - target: all(ibex,any(vivado, openxc7, verilator))
+    files:
+    - rtl/ibex_top_wrap.sv
 
