--- a/gw/projects/boxlambda_base/Bender.yml
+++ b/gw/projects/boxlambda_base/Bender.yml
@@ -14,10 +14,29 @@ sources:
   - target: prj_constraints
     files:
       - constrs/boxlambda_soc.xdc
-  - target: any(vivado, openxc7)
+  - target: all(arty-a7-100, any(vivado, openxc7))
     defines:
       VRAM_SIZE_BYTES: 131072
       DPRAM_SIZE_BYTES: 262144
+      NO_MODPORT_EXPRESSIONS: ~
+      DEBUG_MODULE_ACTIVE: ~
+      YM2149: ~
+      SDSPI: ~
+      DRAM: ~
+      VERA: ~
+      PICORV_DMA: ~
+      USB_HID:  ~
+      SPIFLASH: ~
+      I2C: ~
+      VS0: ~
+      ACK_INVALID_ADDR:  ~
+      #TRACE_ALL_INSTRUCTIONS: ~
+    files:
+      - rtl/boxlambda_top.sv
+  - target: all(arty-a7-35, any(vivado, openxc7))
+    defines:
+      VRAM_SIZE_BYTES: 65536
+      DPRAM_SIZE_BYTES: 65536
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
