--- a/gw/projects/boxlambda_base/CMakeLists.txt
+++ b/gw/projects/boxlambda_base/CMakeLists.txt
@@ -16,6 +16,7 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "openxc7")
       TOP_MODULE boxlambda_top
       PROJECT_NAME boxlambda_base
       MEM_FILE_TARGET cmem_to_flash_vector
+      FREQ 50
   )
 endif()
 
