update to latest ibex code. OpenXC7 tweaks.

--- a/gw/projects/boxlambda_base/Bender.yml
+++ b/gw/projects/boxlambda_base/Bender.yml
@@ -46,7 +46,7 @@ sources:
       SDSPI: ~
       DRAM: ~
       VERA: ~
-      #PICORV_DMA: ~
+      PICORV_DMA: ~
       USB_HID:  ~
       SPIFLASH: ~
       I2C: ~
@@ -65,7 +65,7 @@ sources:
       SDSPI: ~
       DRAM: ~
       VERA: ~
-      #PICORV_DMA: ~
+      PICORV_DMA: ~
       USB_HID:  ~
       SPIFLASH: ~
       I2C: ~
