Switching audio_dac_test to boxlambda clock generator.

--- a/gw/projects/audio_dac_test/Bender.yml
+++ b/gw/projects/audio_dac_test/Bender.yml
@@ -9,6 +9,7 @@ dependencies:
   # Path dependency.
   audio_dac: { path: "../../components/audio_dac" }
   ibex: { path: "../../components/ibex" } # For the clock generator
+  boxlambda_clk_gen: { path: "../../components/boxlambda_clk_gen" }
 
 sources:
   - target: prj_constraints
