Add memory muxes to boxlambda soc to bypass xbar.

--- a/gw/components/wbxbar/Bender.yml
+++ b/gw/components/wbxbar/Bender.yml
@@ -26,6 +26,8 @@ sources:
       - ../../../sub/wb2axip/rtl/wbm2axilite.v
       - ../../../sub/wb2axip/rtl/axi_addr.v
       - ../../../sub/wb2axip/rtl/sfifo.v
+      - ../../../sub/verilog-wishbone/rtl/wb_mux_2.v
+
 
 
 
