--- a/gw/components/ibex/ibex_out/lint-verilator/lowrisc_ibex_ibex_top_0.1.eda.yml
+++ b/gw/components/ibex/ibex_out/lint-verilator/lowrisc_ibex_ibex_top_0.1.eda.yml
@@ -647,6 +647,9 @@ files:
   name: ../src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_prefetch_buffer.sv
 - core: lowrisc:ibex:ibex_core:0.1
   file_type: systemVerilogSource
+  name: ../src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_no_prefetch_buffer.sv
+- core: lowrisc:ibex:ibex_core:0.1
+  file_type: systemVerilogSource
   name: ../src/lowrisc_ibex_ibex_core_0.1/rtl/ibex_pmp.sv
 - core: lowrisc:ibex:ibex_core:0.1
   file_type: systemVerilogSource
